--- a/app/blocks/layout-header/layout-header.pug
+++ b/app/blocks/layout-header/layout-header.pug
@@ -26,6 +26,7 @@ mixin layout-header(data)
             +nd-link-icon-end('plus', 'a')._blue.__link(href="space-v5.html") Space info
       if (data.type === 'space' || data.type==="page")
         +nd-link-icon('share').__share.js-show-popover(href="#share-popover" data-popover-position="end") Share
+        +favorite.__favorite.nd-hide-from-sm
       if data.type === 'list'
         +drop-navigation({title: 'Offers', list: [{name: "All listings (15)", href: "#"}, {name: "Hot desks (2)", href: "#"}, {name: "Fixed desks (8)", href: "#"}, {name: "Meeting Rooms (8)", href: "#"}, {name: "Private offices (5)", href: "#"}]}, 4, 'Private offices (5)')._md._rounded.__select.js-offer-select
     block
