--- a/app/blocks/space-gallery/space-gallery.pug
+++ b/app/blocks/space-gallery/space-gallery.pug
@@ -16,6 +16,7 @@ mixin space-gallery()
         images: ["assets/images/nd/space31.jpg", "assets/images/nd/space32.jpg", "assets/images/nd/space33.jpg"],
         buttons: true,
         buttonsClass: "_small",
-        fancygallery: "space-gallery-m"
-      }).js-nd-gallery
+        fancygallery: "space-gallery-m",
+        counter: true,
+      })._mask.js-nd-gallery
     block
