--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -425,7 +425,7 @@
       }
 
       @include screen('sm', max, 2) {
-        box-shadow: boxShadow(0, 2, 2, 0, rgba(0, 0, 0, .06), 375);
+        box-shadow: none;
       }
 
       &.is-current {
@@ -520,11 +520,11 @@
     }
 
     .layout__column_start_space & {
-      @include rule(padding-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
+      @include rule(padding-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 0));
     }
 
     .layout__column_start_offer & {
-      @include rule(padding-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
+      @include rule(padding-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 0));
       @include rule(padding-right, (xl: 50px, xlg: 50, lg: 50, md: 40, sm: 20));
     }
   }
