--- a/app/layouts/redesign-default.pug
+++ b/app/layouts/redesign-default.pug
@@ -118,7 +118,7 @@ html(lang='en')
       script(src='assets/scripts/app.min.js')
     if map
       //- script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyCKtbucQSqDWV-9lNCgzESqbdUakhraXDY&callback=initMap')
-      script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAlLpVITMmaCmvob8dU3xWWBDOjPefUkZ4&callback=initMap')
+      script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAlLpVITMmaCmvob8dU3xWWBDOjPefUkZ4&callback')
       if newMapFile
         // Библиотека для кластеризации в картах
         script(src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js")
