--- a/app/styles/helpers/_animations.scss
+++ b/app/styles/helpers/_animations.scss
@@ -221,3 +221,27 @@
     height: calc(100% - (6000 / 960) * 1vw);
   }
 }
+
+@keyframes slideIn {
+  0% {
+    transform: translate3d(100%, 0, 0);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translate3d(-100%, 0, 0);
+    opacity: 0;
+  }
+}
