--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -604,6 +604,11 @@
     background-color: $nd-color-daypass;
   }
 
+  &_size5 {
+    @include rule(width, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 5));
+    @include rule(height, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 5));
+  }
+
   &_size6 {
     @include rule(width, (xl: 6px, xlg: 6, lg: 6, md: 6, sm: 6));
     @include rule(height, (xl: 6px, xlg: 6, lg: 6, md: 6, sm: 6));
