--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -496,7 +496,7 @@
 
   &__space-map {
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 24px, xlg: 24, lg: 30, md: 24, sm: 0));
+      @include rule(margin-top, (xl: 24px, xlg: 24, lg: 30, md: 24, sm: 4));
     }
   }
 
@@ -1616,7 +1616,12 @@
         min-width: 30%;
 
         @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 0));
-        @include rule(min-height, (xl: 232px, xlg: 232, lg: 232, md: 232, sm: 177));
+        @include rule(min-height, (xl: 232px, xlg: 232, lg: 232, md: 232, sm: 200));
+
+        @include screen('sm', max, 2) {
+          width: auto;
+          margin: 0 wPxtovw(-20, sm);
+        }
 
         &:not(:first-child) {
           margin-top: 0;
