--- a/app/components/space-description/space-description-v2.scss
+++ b/app/components/space-description/space-description-v2.scss
@@ -6,39 +6,75 @@
   justify-content: flex-start;
   align-items: stretch;
 
+  &__lead {
+    position: relative;
+  }
+
+  &__space-gallery {
+    display: block;
+    width: auto;
+    margin-left: -150px;
+    margin-right: -50px;
+
+    @include screen('xl', max, 2) {
+      margin-left: -60px;
+      margin-right: -50px;
+    }
+
+    @include rule(margin-left, (xlg: -60, lg: -50, md: -50, sm: -20));
+    @include rule(margin-right, (xl: -50px, xlg: -50, lg: -30, md: -40, sm: -20));
+  }
+
+  &__lead-header {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    box-sizing: border-box;
+    display: none;
+    pointer-events: none;
+    color: $nd-color-basic-light;
+    z-index: 2;
+
+    @include rule(padding-right, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
+    @include rule(bottom, (xl: 18px, xlg: 18, lg: 18, md: 18, sm: 18));
+
+    @include screen('sm', max, 2) {
+      display: block;
+    }
+  }
+
+  &__boxes {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  &__name {
+    display: block;
+    font-family: $font-stolzl;
+    line-height: (24 / 20);
+    letter-spacing: normal;
+
+    @include rule(font-size, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 6px, xlg: 6, lg: 6, md: 6, sm: 6));
+    }
+  }
+
   &__head {
     @include screen('sm', max, 2) {
       position: relative;
       z-index: 2;
       background-color: $nd-color-basic-light;
       ;
-
-      .layout_static & {
-        background-color: $nd-color-bg;
-      }
     }
 
     @include rule(padding-top, (sm: 18));
 
     &:not(:first-child) {
       @include rule(padding-top, (sm: 18));
-    }
-
-    &::before {
-      @include screen('sm') {
-        @include pseudo;
-
-        top: -1px;
-        left: pxtovw(-20, 375);
-        right: pxtovw(-20, 375);
-        bottom: 0;
-        background-color: $nd-color-basic-light;
-        z-index: -1;
-
-        .layout_static & {
-          background-color: $nd-color-bg;
-        }
-      }
     }
 
     .nd-section {
@@ -56,77 +92,37 @@
     }
   }
 
-  &__tabs {
-    z-index: 2;
-    background-color: $nd-color-basic-light;
-    ;
-    margin: 0;
-    width: 100%;
-
-    .layout_static & {
-      background-color: $nd-color-bg;
-    }
-
-    &:not(:first-child) {
-      @include rule(padding-top, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 26));
-    }
-
-    &::before {
-      @include screen('sm') {
-        @include pseudo;
-
-        top: -1px;
-        left: pxtovw(-20, 375);
-        right: pxtovw(-20, 375);
-        bottom: 0;
-        background-color: $nd-color-basic-light;
-        ;
-        z-index: -1;
-
-        .layout_static & {
-          background-color: $nd-color-bg;
-        }
-      }
-    }
-  }
-
   &__tabs-content {
     background-color: $nd-color-bg;
-
-    @include screen('sm', min, 2) {
-      order: 2;
-    }
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
 
     @include screen('sm', max, 2) {
       background-color: $nd-color-basic-light;
       ;
       position: relative;
       z-index: 2;
-
-      .layout_static & {
-        background-color: $nd-color-bg;
-      }
+      overflow: visible;
     }
 
-    &::before {
-      @include screen('sm') {
-        @include pseudo;
+    .tabs-content__wrapper {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      opacity: 0;
+      transform: translate3d(100%, 0, 0);
+      transition: opacity $ease-main, transform $ease-main;
 
-        top: -1px;
-        left: pxtovw(-20, 375);
-        right: pxtovw(-20, 375);
-        bottom: 0;
-        background-color: $nd-color-basic-light;
-        z-index: -1;
-
-        .layout_static & {
-          background-color: $nd-color-bg;
-        }
+      &.active {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
       }
-    }
 
-    &:not(:first-child) {
-      @include rule(padding-top, (xl: 0, sm: 28));
+      &.in-active {
+        opacity: 0;
+        transform: translate3d(-100%, 0, 0);
+      }
     }
 
     .nd-results {
@@ -134,8 +130,16 @@
     }
 
     .nd-section {
-      &:not(:first-child) {
-        @include rule(padding-top, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 30));
+      @include rule(padding-top, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 30));
+
+      &_space-map {
+        @include rule(padding-top, (sm: 15));
+      }
+
+      &:first-child {
+        @include screen('sm', max, 2) {
+          padding-top: wPxtovw(5, sm);
+        }
       }
 
       &__text {
@@ -148,21 +152,19 @@
 
       &__content {
         &:not(:first-child) {
-          @include rule(margin-top, (xl: 34px, xlg: 34, lg: 34, md: 34, sm: 24));
+          @include rule(margin-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 24));
         }
       }
 
       &__routes {
-        @include rule(margin-bottom, (sm: 45));
-
         &:not(:first-child) {
-          @include rule(margin-top, (sm: 18));
+          @include rule(margin-top, (sm: 15));
         }
       }
 
       &__facility {
         &:not(:first-child) {
-          @include rule(margin-top, (xl: 32px, xlg: 32, lg: 32, md: 32, sm: 45));
+          @include rule(margin-top, (xl: 32px, xlg: 32, lg: 32, md: 32, sm: 20));
         }
       }
     }
@@ -186,7 +188,11 @@
       order: 1;
     }
 
-    @include rule(padding-top, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 0));
+    @include rule(padding-top, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 15));
+  }
+
+  .space-map {
+    @include rule(margin-bottom, (sm: 40));
   }
 }
 
@@ -208,7 +214,82 @@
 
   &.active {
     @include screen('sm', max, 2) {
-      display: inline-flex !important;
+      display: flex !important;
+    }
+  }
+
+  &.tabs {
+    display: none;
+    padding: 0;
+
+    @include screen('sm', max, 2) {
+      display: flex;
+      width: 100%;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: 0;
+      height: wPxtovw(60, sm);
+      box-shadow: boxShadow(0, -1, 3, 0, rgba(0, 0, 0, 0.03), 375);
+    }
+
+    &::after {
+      display: none;
+    }
+
+    .tabs__tab {
+      width: 50%;
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      height: auto;
+      border-top: none;
+      padding: 0;
+      margin: 0;
+      text-transform: none;
+      flex: none;
+      font-family: $font-stolzl;
+      font-weight: 400;
+      letter-spacing: -.015em;
+      color: $nd-color-basic;
+      line-height: 1.23;
+      border-bottom: none;
+      box-shadow: 0 0 0 transparent;
+      z-index: 2;
+      box-sizing: border-box;
+      vertical-align: middle;
+
+      @include rule(padding, (xl: 6px 20px, xlg: 6 20, lg: 6 20, md: 6 20, sm: 6 20));
+      @include rule(font-size, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 13));
+
+      &.active {
+        color: $nd-color-gray-text;
+        box-shadow: 0 0 0 0 transparent;
+
+        span {
+          display: none;
+        }
+      }
+    }
+
+    .tabs__line {
+      @include rule(height, (sm: 6));
+
+      @include screen('sm', max, 2) {
+        display: block;
+        position: absolute;
+        width: 50%;
+        background-color: $nd-color-main;
+        left: 0;
+        bottom: 0;
+        transform: translate3d(0, 0, 0);
+        transition: transform $ease-main;
+      }
+    }
+
+    .tabs__tab.active:nth-child(2) ~ .tabs__line {
+      transform: translate3d(100%, 0, 0);
     }
   }
 }
