fixes for space layout

--- a/app/blocks/layout-header/layout-header.scss
+++ b/app/blocks/layout-header/layout-header.scss
@@ -134,7 +134,7 @@
     @include rule(height, (sm: 32));
     @include rule(padding, (sm: 7));
 
-    .layout-offer-active & {
+    .layout-offer-active &, .layout_stable_centered & {
       @include screen('sm', max, 2) {
         display: block;
         box-sizing: border-box;
