--- a/app/components/space-description/space-description-v2.scss
+++ b/app/components/space-description/space-description-v2.scss
@@ -77,6 +77,12 @@
       @include rule(padding-top, (sm: 18));
     }
 
+    .layout_stable & {
+      @include screen('sm', max, 2) {
+        background-color: $nd-color-bg;
+      }
+    }
+
     .nd-section {
       &__title {
         letter-spacing: normal;
@@ -105,6 +111,12 @@
       position: relative;
       z-index: 2;
       overflow: visible;
+    }
+
+    .layout_stable & {
+      @include screen('sm', max, 2) {
+        background-color: $nd-color-bg;
+      }
     }
 
     .tabs-content__wrapper {
@@ -225,7 +237,7 @@
     @include screen('sm', max, 2) {
       display: flex;
       width: 100%;
-      position: absolute;
+      position: fixed;
       bottom: 0;
       left: 0;
       right: 0;
