--- a/app/pages/newest/single-offer/single-offer.pug
+++ b/app/pages/newest/single-offer/single-offer.pug
@@ -8,7 +8,7 @@ block bodyClasses
   - var isNoFooter = true
   - var isUserPanel = true;
   - var bodyCls = '';
-  - var scripts = ['other']
+  - var scripts = ['search']
 
 block header
   - var headerClass = ' is-login'
