--- a/app/pages/newest/search/search-v3.pug
+++ b/app/pages/newest/search/search-v3.pug
@@ -6,7 +6,7 @@ block head
 block bodyClasses
   - var bodyCls = ' ';
   - var isNoFooter = true
-  - var scripts = ['other']
+  - var scripts = ['search']
   - var searchPage = true
 
 block header
