--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -102,6 +102,7 @@ include ../blocks/label/label
 include ../blocks/layout-header/layout-header
 include ../blocks/link/link
 include ../blocks/list-table/list-table
+include ../blocks/list-toggle/list-toggle
 include ../blocks/lists/lists
 include ../blocks/loader/loader
 include ../blocks/logo/logo
