--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -275,6 +275,22 @@
       @include screen('sm', max, 2) {
         width: 100%;
       }
+
+      &::before {
+        @include screen('sm', max, 2) {
+          @include pseudo;
+
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: linear-gradient(180deg, #13141A 0%, rgba(51, 53, 70, 0) 33%);
+          background-repeat: no-repeat;
+          z-index: 2;
+          opacity: 0.3;
+          pointer-events: none;
+        }
+      }
     }
 
     #{$b}_single-offer_short & {
@@ -285,15 +301,42 @@
       @include screen('md', max, 2) {
         width: 100%;
       }
+
+      &::before {
+        @include screen('sm', max, 2) {
+          @include pseudo;
+
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: linear-gradient(180deg, #13141A 0%, rgba(51, 53, 70, 0) 33%);
+          background-repeat: no-repeat;
+          z-index: 2;
+          opacity: 0.3;
+          pointer-events: none;
+        }
+      }
     }
 
     #{$b}__media {
+      position: relative;
       width: 100%;
       z-index: 1;
 
       &:not(:first-child) {
         margin-top: 0;
       }
+    }
+
+    #{$b}__image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 0;
     }
   }
 
@@ -303,7 +346,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: 3;
     box-sizing: border-box;
     display: block;
     pointer-events: none;
@@ -421,6 +464,10 @@
       }
 
       #{$b}_side-nav & {
+        border-radius: 0;
+      }
+
+      #{$b}_single-offer & {
         border-radius: 0;
       }
     }
