--- a/app/components/space-description/space-description-v2.scss
+++ b/app/components/space-description/space-description-v2.scss
@@ -105,12 +105,14 @@
     grid-template-columns: 100%;
     grid-template-rows: auto;
 
+    @include rule(margin, (sm: 0 -20));
+
     @include screen('sm', max, 2) {
       background-color: $nd-color-basic-light;
       ;
       position: relative;
       z-index: 2;
-      overflow: visible;
+      width: auto;
     }
 
     .layout_stable & {
@@ -125,6 +127,9 @@
       opacity: 0;
       transform: translate3d(100%, 0, 0);
       transition: opacity $ease-main, transform $ease-main;
+      box-sizing: border-box;
+
+      @include rule(padding, (sm: 0 20));
 
       &.active {
         opacity: 1;
@@ -138,7 +143,22 @@
     }
 
     .nd-results {
-      @include rule(padding-top, (xl: 37px, xlg: 37, lg: 37, md: 37, sm: 37));
+      @include rule(padding-top, (xl: 37px, xlg: 37, lg: 37, md: 37, sm: 30));
+
+      &[data-list-type] {
+        display: none;
+        opacity: 0;
+        transition: opacity $ease-main;
+      }
+
+      &.is-active {
+        display: block;
+        opacity: 1;
+      }
+
+      &:not(:first-child) {
+        @include rule(margin-top, (sm: 0));
+      }
     }
 
     .nd-section {
@@ -203,6 +223,28 @@
     @include rule(padding-top, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 15));
   }
 
+  &__filter {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    box-sizing: border-box;
+
+    @include rule(padding-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
+  }
+
+  &__select {
+    flex: 1;
+
+    &:not(:last-child) {
+      @include rule(margin-right, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+    }
+  }
+
+  &__toggle {
+    flex: none;
+  }
+
   .space-map {
     @include rule(margin-bottom, (sm: 40));
   }
@@ -218,7 +260,7 @@
   display: none;
   position: absolute;
   bottom: 0;
-  z-index: 3;
+  z-index: 23;
 
   @include screen('sm', max, 2) {
     width: calc(100% + (4000 / 375)*1vw);
