--- a/app/pages/newest/space/space-v5.pug
+++ b/app/pages/newest/space/space-v5.pug
@@ -76,6 +76,15 @@ block content
       +layout-header({type: 'list', popup: true})._sort
 
 
+  +modals('div')
+    +modal({header: {title: 'Offer type'}, footer: false})#sort-offer
+      +e.list
+        each item in [{title: 'All listings', value: 'All listings', name: 'sortOffer', checked: true}, {title: 'Private office', value: 'Private office', name: 'sortOffer'}, {title: 'Fixed desk', value: 'Fixed desk', name: 'sortOffer'}, {title: 'Hot desk', value: 'Hot desk', name: 'sortOffer'}, {title: 'Meeting room', value: 'Meeting room', name: 'sortOffer'}, {title: 'Day pass', value: 'Day pass', name: 'sortOffer'}]
+          +styled-radio(item.title)._sort.__item
+            if item.checked
+              +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value), data-modal-item-type="sortOffer" checked)
+            else
+              +e.INPUT.input(type="radio", value=item.value, name=item.name, data-modal-item, data-modal-item-value=(item.value), data-modal-item-type="sortOffer")
 
 block panels
   +share-popover#share-popover
