--- a/app/blocks/offer-description-panel/offer-description-panel.scss
+++ b/app/blocks/offer-description-panel/offer-description-panel.scss
@@ -60,6 +60,10 @@
     &:not(:last-child) {
       @include rule(margin-right, (xl: 17px, xlg: 17, lg: 12, md: 12, sm: 10));
     }
+
+    &_wide {
+      width: 100%;
+    }
   }
 
   &__offer {
