--- a/app/blocks/routes/routes.pug
+++ b/app/blocks/routes/routes.pug
@@ -93,7 +93,7 @@ mixin routes-v2(offer)
           +e.TD.time 9 min
 
     if !offer
-      +e.TABLE.table
+      +e.TABLE.table.nd-hide-sm
         tbody
           +e.TR.row
             +e.TD.location
