--- a/app/blocks/space-map/space-map.scss
+++ b/app/blocks/space-map/space-map.scss
@@ -41,7 +41,7 @@
     @include rule(height, (sm: 200));
 
     @include screen('sm', max, 2) {
-      pointer-events: none;
+      pointer-events: auto;
     }
 
     #{$b}.is-active & {
