--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -649,6 +649,7 @@
           grid-row: 1 / 2;
           height: auto;
           overflow: auto;
+          border: none;
 
           @include cRule(padding-right, (xl: 41.51%, lg: 47.07%, md: 31.25%, sm: 0));
 
@@ -714,7 +715,7 @@
             @include rule(padding, (xl: 0 50px, xlg: 0 50, lg: 0 50, md: 0, sm: 0));
 
             .layout__wrapper {
-              @include rule(padding-top, (xl: 95px, xlg: 95, lg: 95, md: 60, sm: 60));
+              @include rule(padding-top, (xl: 95px, xlg: 95, lg: 95, md: 60, sm: 0));
               @include rule(padding-left, (xl: 0, md: 50, sm: 20));
               @include rule(padding-right, (xl: 0, md: 40, sm: 20));
             }
