--- a/app/components/offer-card/offer-card.scss
+++ b/app/components/offer-card/offer-card.scss
@@ -1475,7 +1475,7 @@
       }
 
       &__price {
-        display: block;
+        display: inline-block;
         margin-top: 0;
         margin-bottom: 0;
         background-color: transparent;
@@ -1484,6 +1484,7 @@
         color: currentColor;
         font-family: $font-main;
         height: auto;
+        white-space: nowrap;
 
         @include rule(font-size, (xl: 14px, xlg: 14, lg: 14, md: 14, sm: 14));
 
