--- a/app/components/space-description/space-description-v2.pug
+++ b/app/components/space-description/space-description-v2.pug
@@ -10,7 +10,7 @@ mixin space-description-v2()
           +nd-box._green._size5
         +e.name 13 Hanover Square
     +tabs-content.space-description-v2__tabs-content
-      +tab-wrapper()(data-tab="tab-space-offers" data-tab-group="tab-space")
+      +tab-wrapper().tabs-content__wrapper_gray(data-tab="tab-space-offers" data-tab-group="tab-space")
 
         +e.filter
           +modal-output({placeholder: 'Offer type'})._h40._blue-toggle.__select.js-toggle-modal(data-modal-target="sort-offer" data-modal-output-type="sortOffer" )
