--- a/app/pages/newest/search/search-types-v3.pug
+++ b/app/pages/newest/search/search-types-v3.pug
@@ -112,11 +112,10 @@ block content
 
     +e.column_start._start_offer._popup(data-layout="offer")
       +e.wrapper
-        +offer-description-v2
+        +offer-description-v2-daypass
         +offer-description-panel()._fixed.is-visible.nd-hide-from-sm
           +e.buttons
-            +nd-button._pad10._black.__button.js-nd-arrange-viewing(href="#nd-popup-arrange-viewing" data-min-date="2021-15-4" data-max-date="2021-20-8") Arrange viewing
-            +nd-button._pad10.__button(href="#") Request reservation
+            +nd-button._pad10.__button._wide(href="#") Book now
 
     +e.column_header._popup(data-layout="space,offer,list")
       +layout-header({type: 'space', popup: true})._main
