--- a/app/blocks/tooltip/tooltip.scss
+++ b/app/blocks/tooltip/tooltip.scss
@@ -136,6 +136,34 @@
   }
 }
 
+.sp-dark {
+  .tooltipster-box {
+    font-family: $font-main;
+    display: block;
+    box-sizing: border-box;
+    background-color: transparent;
+    border: none;
+    border-radius: 0;
+    line-height: 1.35;
+
+    @include rule(font-size, (xl: 13px, xlg: 13, lg: 13, md: 13, sm: 13));
+    @include rule(padding, (xl: 10px, xlg: 10, lg: 10, md: 10, sm: 10));
+  }
+
+  .tooltipster-content {
+    display: block;
+    box-sizing: border-box;
+    color: $nd-color-gray-text;
+    background-color: rgba(0, 0, 0, .7);
+    border: none;
+    box-shadow: 0 0 0 0 transparent;
+    line-height: 1.35;
+
+    @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
+    @include rule(padding, (xl: 7px 8px, xlg: 7 8, lg: 7 8, md: 7 8, sm: 7 8));
+  }
+}
+
 // Анимации
 
 .tooltipster-fade {
@@ -148,4 +176,34 @@
 .tooltipster-fade.tooltipster-show {
   opacity: 1;
   transform: scale(1) translate3d(0, 0, 0);
+}
+
+.tooltipster-slide {
+  opacity: 0;
+  transition: opacity $ease-main;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
+
+  .tooltipster-content {
+    transition: transform $ease-main;
+    transform: translate3d(100%, 0, 0);
+  }
+}
+
+.tooltipster-slide.tooltipster-show {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
+
+  .tooltipster-content {
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.tooltipster-slide.tooltipster-dying {
+  opacity: 0;
+  transform: translate3d(0, 0, 0);
+
+  .tooltipster-content {
+    transform: translate3d(100%, 0, 0);
+  }
 }
