--- a/app/components/offer-description/offer-description.pug
+++ b/app/components/offer-description/offer-description.pug
@@ -57,17 +57,28 @@ mixin offer-description(static)
 
 mixin offer-description-v2(stable)
   +b.offer-description_v2&attributes(attributes)
-    +e.A.subtitle.nd-hide-from-sm(href="space-v5.html")
-      SPAN.gray Space:
-      SPAN &nbsp;House of Creative - 320 Angel
-    +e.media
-      +e.PICTURE.media-image
-        source(src="assets/images/nd/space30.jpg" srcset="assets/images/nd/space30.jpg")
-        img(src="assets/images/nd/space30.jpg")
+    //- +e.A.subtitle.nd-hide-from-sm(href="space-v5.html")
+    //-   SPAN.gray Space:
+    //-   SPAN &nbsp;House of Creative - 320 Angel
+    +e.preview
+      +e.preview-info
+        +e.preview-start
+          +space-type._white._fz12.__type
+            +nd-box()._orange.__box_sz9
+            +e.name hot desk
+          +e.H3.preview-title Office Day Pass
+        +e.preview-end
+          +e.preview-price £ 25 / day
+          +e.BUTTON.preview-tooltip.js-tooltip-v2(href="#" title='*  prices are exclusive of VAT')
+            +icon('tooltip-marker')
+      +e.media
+        +e.PICTURE.media-image
+          source(src="assets/images/nd/space30.jpg" srcset="assets/images/nd/space30.jpg")
+          img(src="assets/images/nd/space30.jpg")
     +e.layout
       +e.SECTION.content
         +e.SECTION.section_describe
-          +e.header
+          +e.header.nd-hide-sm
             +space-type._gray._fz12.__type
               +nd-box()._green.__box_sz9
               +e.name PRIVATE OFFICE
@@ -85,12 +96,12 @@ mixin offer-description-v2(stable)
               tr
                 td Min. term
                 td 1 month
-              tr
+              tr.nd-hide-sm
                 td Price
                 td
                   strong £ 2,400 per month
           +e.text Perfectly located on Shoreditch High Street, alongside three of our other buildings, 229 offers 12 private offices, meeting rooms, large board room and a perfect breakout/kitchen
-        +e.row
+        +e.row_plan
           +e.SECTION.section_table.nd-hide-sm
             +e.H4.title_fz16 About
             +nd-table._info._info_space._info_space-v2.__table
@@ -109,14 +120,16 @@ mixin offer-description-v2(stable)
             +e.PICTURE.image(data-fancybox='floorplan' data-src="assets/images/nd/floor-plan3.jpg")
               source(src="assets/images/nd/floor-plan3.jpg" srcset="assets/images/nd/floor-plan3.jpg")
               img(src="assets/images/nd/floor-plan3.jpg")
-        if stable
-          +e.SECTION.section_map
-            +e.head
-              +e.H4.title_fz16 Location
-              +address-line({line: ['London', 'Southwark', 'SE1']}).__address
-            +e.row
-              +space-map('space-map').__map
-              +routes-v2(true).__routes
+
+        +e.SECTION.section_map(class=(stable ? '' : 'nd-hide-from-sm'))
+          +e.head
+            +e.H4.title_fz16.nd-hide-sm Location
+            +address-line({line: ['London', 'Southwark', 'SE1']}).__address
+
+          +e.row
+            +space-map('offer-map', 'offer').__map
+            if stable
+              +routes-v2(true).__routes.nd-hide-sm
         +e.SECTION.section_list
           +e.H4.title_fz16 Included
           +styled-list
@@ -128,3 +141,87 @@ mixin offer-description-v2(stable)
         +offer-description-sidebar
         +e.note prices are exclusive of VAT
     block
+
+
+mixin offer-description-v2-daypass(stable)
+  +b.offer-description_v2&attributes(attributes)
+    +e.preview
+      +e.preview-info
+        +e.preview-start
+          +space-type._white._fz12.__type
+            +nd-box()._dark-blue.__box_sz9
+            +e.name day pass
+          +e.H3.preview-title Office Day Pass
+        +e.preview-end
+          +e.preview-price £ 25 / day
+          +e.BUTTON.preview-tooltip.js-tooltip-v2(href="#" title='*  prices are exclusive of VAT')
+            +icon('tooltip-marker')
+      +e.media
+        +e.PICTURE.media-image
+          source(src="assets/images/nd/space30.jpg" srcset="assets/images/nd/space30.jpg")
+          img(src="assets/images/nd/space30.jpg")
+    +e.layout
+      +e.SECTION.content
+        +e.SECTION.section_describe
+          +e.header.nd-hide-sm
+            +space-type._gray._fz12.__type
+              +nd-box()._dark-blue.__box_sz9
+              +e.name day pass
+            +e.bottom
+              +e.H3.title 13 desks office space
+            +favorite.__favorite
+          +nd-table._info._info_space._info_space-v2.__table.nd-hide
+            tbody
+              tr
+                td Amount of desks
+                td 12
+              tr
+                td Floor area
+                td 257 ft<sup>2</sup>
+              tr
+                td Min. term
+                td 1 month
+              tr.nd-hide-sm
+                td Price
+                td
+                  strong £ 2,400 per month
+          +e.text Perfectly located on Shoreditch High Street, alongside three of our other buildings, 229 offers 12 private offices, meeting rooms, large board room and a perfect breakout/kitchen
+        +e.row_plan.nd-hide-sm
+          +e.SECTION.section_table.nd-hide-sm
+            +e.H4.title_fz16 About
+            +nd-table._info._info_space._info_space-v2.__table
+              tbody
+                tr
+                  td Amount of desks
+                  td 12
+                tr
+                  td Floor area
+                  td 257 ft<sup>2</sup>
+                tr
+                  td Min. term
+                  td 1 month
+          +e.SECTION.section_plan
+            +e.H4.title_fz16 Floor Plan
+            +e.PICTURE.image(data-fancybox='floorplan' data-src="assets/images/nd/floor-plan3.jpg")
+              source(src="assets/images/nd/floor-plan3.jpg" srcset="assets/images/nd/floor-plan3.jpg")
+              img(src="assets/images/nd/floor-plan3.jpg")
+
+        +e.SECTION.section_map(class=(stable ? '' : 'nd-hide-from-sm'))
+          +e.head
+            +e.H4.title_fz16.nd-hide-sm Location
+            +address-line({line: ['London', 'Southwark', 'SE1']}).__address
+
+          +e.row
+            +space-map('offer-map', 'offer').__map
+            if stable
+              +routes-v2(true).__routes.nd-hide-sm
+        +e.SECTION.section_list
+          +e.H4.title_fz16 Included
+          +styled-list
+            li Business rates included
+            li Utilities included
+            li Unlimited Teas and Coffees
+            li 12 Hour free meeting room allowance per desk
+      +e.sidebar.nd-hide-sm
+        +offer-description-sidebar
+        +e.note prices are exclusive of VAT
