--- a/app/components/offer-description/offer-description.scss
+++ b/app/components/offer-description/offer-description.scss
@@ -33,11 +33,107 @@
     }
   }
 
+  &__preview {
+    position: relative;
+    overflow: hidden;
+
+    @include rule(margin, (sm: 0 -20));
+
+    &::before {
+      @include screen('sm', max, 2) {
+        @include pseudo;
+
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(180deg, #13141A 0%, rgba(51, 53, 70, 0) 33%, rgba(51, 53, 70, 0) 66%, #13141A 100%);
+        background-repeat: no-repeat;
+        pointer-events: none;
+        opacity: .8;
+        z-index: 2;
+      }
+    }
+  }
+
+  &__preview-info {
+    display: none;
+    color: $nd-color-basic-light;
+    box-sizing: border-box;
+
+    @include rule(padding, (sm: 0 20 18));
+
+    @include screen('sm', max, 2) {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+      z-index: 3;
+    }
+  }
+
+  &__preview-start {
+    display: block;
+    width: 60%;
+  }
+
+  &__preview-end {
+    flex: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 40%;
+  }
+
+  &__preview-title {
+    font-family: $font-stolzl;
+    font-weight: 400;
+    line-height: (22 / 20);
+
+    @include rule(font-size, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+
+    &:not(:first-child) {
+      @include rule(margin-top, (sm: 5));
+    }
+  }
+
+  &__preview-price {
+    font-weight: 600;
+    line-height: (20 / 15);
+    white-space: nowrap;
+
+    @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 15, sm: 15));
+  }
+
+  &__preview-tooltip {
+    display: block;
+    color: $nd-color-main;
+    box-sizing: border-box;
+    font-size: 0;
+    line-height: 0;
+
+    @include rule(padding, (xl: 4px, xlg: 4, lg: 4, md: 4, sm: 4));
+    @include rule(width, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+    @include rule(height, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+    @include rule(margin-right, (xl: -5px, xlg: -5, lg: -5, md: -5, sm: -5));
+
+    svg {
+      display: block;
+      width: 100%;
+      height: 100%;
+      fill: currentColor;
+    }
+  }
+
   &__media {
     position: relative;
     // width: 100%;
     overflow: hidden;
     padding-top: 28.541667vw;
+    z-index: 1;
 
     @include rule(margin-left, (md: -50, sm: 0));
     @include rule(margin-right, (md: -40, sm: 0));
@@ -51,11 +147,7 @@
     }
 
     @include screen('sm', max, 2) {
-      padding-top: 63.28%;
-    }
-
-    &:not(:first-child) {
-      @include rule(margin-top, (sm: 20));
+      @include ratio(375, 300);
     }
 
     .layout__column_popup & {
@@ -306,7 +398,7 @@
     @include cRule(flex-wrap, (sm: wrap));
 
     &:not(:first-child) {
-      @include rule(margin-top, (xl: 28px, xlg: 28, lg: 28, md: 28, sm: 18));
+      @include rule(margin-top, (xl: 28px, xlg: 28, lg: 28, md: 28, sm: 4));
     }
   }
 
@@ -344,6 +436,10 @@
 
     .layout__column_popup & {
       @include cRule(flex-wrap, (md: wrap));
+    }
+
+    &_plan {
+      @include cRule(order, (sm: 4));
     }
   }
 
@@ -454,7 +550,7 @@
 
       &__text {
         &:not(:first-child) {
-          @include rule(margin-top, (sm: 34));
+          @include rule(margin-top, (sm: 24));
         }
       }
 
@@ -473,10 +569,11 @@
         }
 
         &_map {
-          @include rule(margin-top, (xl: 38px, xlg: 38, lg: 38, md: 38, sm: 38));
+          @include rule(margin-top, (xl: 38px, xlg: 38, lg: 38, md: 38, sm: 22));
+          @include cRule(order, (sm: 3));
 
           .offer-description__row {
-            @include rule(margin-top, (xl: 24px, xlg: 24, lg: 24, md: 24, sm: 24));
+            @include rule(margin-top, (xl: 24px, xlg: 24, lg: 24, md: 24, sm: 8));
           }
         }
 
@@ -497,6 +594,8 @@
 
         &_list {
           padding-left: 0;
+
+          @include cRule(order, (sm: 5));
         }
       }
 
@@ -515,6 +614,12 @@
           font-weight: 400;
 
           @include rule(font-size, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
+        }
+      }
+
+      &__address {
+        &:not(:first-child) {
+          @include rule(margin-left, (xl: 27px, xlg: 27, lg: 27, md: 27, sm: 0));
         }
       }
 
