--- a/app/components/space-description/space-description-v2.scss
+++ b/app/components/space-description/space-description-v2.scss
@@ -131,6 +131,10 @@
 
       @include rule(padding, (sm: 0 20));
 
+      &_gray {
+        background-color: $nd-color-bg;
+      }
+
       &.active {
         opacity: 1;
         transform: translate3d(0, 0, 0);
@@ -261,6 +265,7 @@
   position: absolute;
   bottom: 0;
   z-index: 23;
+  transition: transform $ease-main, opacity $ease-main;
 
   @include screen('sm', max, 2) {
     width: calc(100% + (4000 / 375)*1vw);
@@ -344,6 +349,10 @@
 
     .tabs__tab.active:nth-child(2) ~ .tabs__line {
       transform: translate3d(100%, 0, 0);
+    }
+
+    .layout-offer-active & {
+      transform: translate3d(0, 100%, 0);
     }
   }
 }
