add map tooltip for offer

--- a/app/blocks/layout-header/layout-header.scss
+++ b/app/blocks/layout-header/layout-header.scss
@@ -49,6 +49,12 @@
         }
       }
 
+      &.is-dark-blue {
+        &::before {
+          background-color: $nd-color-daypass;
+        }
+      }
+
       &.is-red {
         &::before {
           background-color: $nd-color-fixeddesk;
