--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -210,9 +210,7 @@
       }
 
       &.is-current {
-        @include screen('sm', min, 2) {
-          z-index: 12;
-        }
+        z-index: 12;
       }
 
       &.layout__column_start {
@@ -303,6 +301,16 @@
           @include screen('sm', max, 2) {
             width: 100%;
           }
+        }
+      }
+
+      .layout-space-active-reopen & {
+        &[data-layout*="space"] {
+          visibility: visible;
+          opacity: 1;
+          width: 100%;
+          animation: reopen .5s ease;
+          pointer-events: auto;
         }
       }
 
