--- a/app/components/space-description/space-description-v2.scss
+++ b/app/components/space-description/space-description-v2.scss
@@ -351,7 +351,7 @@
       transform: translate3d(100%, 0, 0);
     }
 
-    .layout-offer-active & {
+    [data-layout-last="offer"].layout-offer-active & {
       transform: translate3d(0, 100%, 0);
     }
   }
