--- a/app/styles/helpers/_animations.scss
+++ b/app/styles/helpers/_animations.scss
@@ -245,3 +245,15 @@
     opacity: 0;
   }
 }
+
+@keyframes reopen {
+  0% {
+    opacity: 0;
+    transform: translate3d(100vw, 0, 0);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
